--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -23,6 +23,7 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
+<link rel="stylesheet" href="{{ site.url }}/assets/css/academicons.css">
 
 <meta http-equiv="cleartype" content="on">
 
